# 6302balakirevio

./: .flake8  .gitignore  README.md  config.py  custom_image_processing.py  image_processing.py  main.py  met_api.py  utils.py
api/: __init__.py  met_api.py
data/paintings/: painting_38046.json  painting_75003.json
decorators/: __init__.py  timer_decorator.py
met_analysis/: analysis.py  config.py  generators.py  plotting.py
metetl/: .editorconfig  .gitignore  README.md  pyproject.toml
metetl/data/: to_download.json
metetl/src/metetl/: __init__.py  __main__.py  cli.py  decorators.py  logging_config.json  logging_config.py
metetl/src/metetl/analysis/: __init__.py  analysis.py  config.py  generators.py  plotting.py
metetl/src/metetl/images/: __init__.py  async_downloader.py  config.py  image_processor.py  parallel_processor.py  utils.py
metetl/src/metetl/images/models/: __init__.py  artwork.py  color_artwork.py  grayscale_artwork.py  metadata.py
models/: __init__.py  artwork.py  color_artwork.py  grayscale_artwork.py  metadata.py
paintings/: painting_45366.json
parallel/: async_downloader.py  config.py  parallel_processor.py  utils.py
processors/: __init__.py  image_processor.py
