[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balakirev6302"
version = "0.0.2"
description = "Met Museum ETL - инструмент для работы с данными Metropolitan Museum of Art"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Balakirev Ilya", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.18.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[project.scripts]
metetl = "metetl.cli:main"

[project.urls]
Homepage = "https://github.com/Ziorde/6302balakirevio/metetl"
Repository = "https://github.com/Ziorde/6302balakirevio/metetl.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metetl = ["*.json", "*.csv"]